# Graduate-Project

./: CMakeLists.txt  README.md  device_selector.sh
main/: CMakeLists.txt  grad_proj.c
main/bluetooth/: ble_fdcan_sens.h  gatt_svr.c
main/canaes/: canaes.c  canaes.h
main/canascon/: canascon.c  canascon.h
main/esp32_ascon/: ascon.h  decrypt.c  decrypt.h  encrypt.c  encrypt.h
main/i2c_devices/: AHT20.c  AHT20.h  lsm6d.c  lsm6d.h  veml.c  veml.h
pictures/: IMG_6477.HEIC
