idf_component_register(SRCS "grad_proj.c"
                    "esp32_ascon/decrypt.c"
                    "esp32_ascon/encrypt.c"
                    "esp32_ascon/core.c"
                    "esp32_ascon/permutations.c"
                    "i2c_devices/AHT20.c"
                    "i2c_devices/lsm6d.c"
                    "i2c_devices/veml.c"
                    "canascon/canascon.c"
                    "bluetooth/gatt_svr.c"
                    INCLUDE_DIRS "." "esp32_ascon" "./bluetooth"
                    REQUIRES led_strip driver bt nvs_flash esp_hw_support mbedtls)
